bug:fix integration test errors of filters