@@ -1,6 +1,5 @@
 package uk.ac.ebi.biosamples.cohortatlas.repository;
 
-import static org.junit.jupiter.api.Assertions.*;
 import org.junit.jupiter.api.Test;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.context.SpringBootTest;
@@ -8,13 +7,14 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.test.context.ActiveProfiles;
 import uk.ac.ebi.biosamples.cohortatlas.model.Cohort;
-import uk.ac.ebi.biosamples.cohortatlas.model.DataTypes;
 import uk.ac.ebi.biosamples.cohortatlas.service.CohortService;
 
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 @SpringBootTest
 @ActiveProfiles("test")
@@ -23,7 +23,6 @@ class CohortSearchRepositoryIntegrationTest {
   private CohortService cohortService;
   @Autowired
   private CohortSearchRepository cohortSearchRepository;
-
 
   @Test
   void findPage() {
@@ -39,7 +38,9 @@ class CohortSearchRepositoryIntegrationTest {
     cohort.setAcronym("CHILD");
     cohortService.saveCohort(cohort);
 
-    Page<Cohort> page = cohortSearchRepository.findPageWithFilters(PageRequest.of(0, 5), "CohortSearchRepositoryIntegrationTest", "cohortName", Collections.emptyList());
+    Page<Cohort> page = cohortSearchRepository.findPageWithFilters(
+        PageRequest.of(0, 5), "CohortSearchRepositoryIntegrationTest",
+        "cohortName", Collections.emptyList());
     assertTrue(page.getSize() > 1);
     assertEquals("SearchRepositoryIntegrationTest_freeTextSearch_1", page.getContent().get(0).getCohortName());
   }
@@ -56,60 +57,52 @@ class CohortSearchRepositoryIntegrationTest {
     cohort.setCohortName("second");
     cohort.setDescription("second");
     cohort.setAcronym("filter2");
+    cohort.setDataTypes(Collections.singletonList("testDataType"));
     cohortService.saveCohort(cohort);
-
 
     //single filter
     Page<Cohort> page = cohortSearchRepository.findPageWithFilters(PageRequest.of(0, 5), null,
-            "cohortName", Collections.singletonList("dataTypes:biospecimens"));
+        "cohortName", Collections.singletonList("dataTypes:biospecimens"));
     int pageSizeBefore = page.getContent().size();
-    page.forEach( cohort1 -> assertTrue( cohort1.getDataTypes().contains("biospecimens")));
-
+    page.forEach(cohort1 -> assertTrue(cohort1.getDataTypes().contains("biospecimens")));
 
     cohort = new Cohort();
     cohort.setCohortName("third");
     cohort.setDescription("third");
     cohort.setAcronym("filter3");
-    List<String> dataTypes = List.of("biospecimens");
+    List<String> dataTypes = List.of("biospecimens", "testDataType");
     cohort.setDataTypes(dataTypes);
     cohortService.saveCohort(cohort);
 
     page = cohortSearchRepository.findPageWithFilters(PageRequest.of(0, 5), null,
-            "accession", Collections.singletonList("dataTypes:biospecimens"));
-    assertEquals(1+pageSizeBefore, page.getContent().size());
-    page.forEach( cohort1 -> assertTrue( cohort1.getDataTypes().contains("biospecimens")));
+        "accession", Collections.singletonList("dataTypes:biospecimens"));
+    assertEquals(1 + pageSizeBefore, page.getContent().size());
+    page.forEach(cohort1 -> assertTrue(cohort1.getDataTypes().contains("biospecimens")));
     assertEquals("third", page.getContent().get(pageSizeBefore).getCohortName());
-
 
     //single filter
     page = cohortSearchRepository.findPageWithFilters(PageRequest.of(0, 5), null,
-            "cohortName", Collections.singletonList("acronym:filter3"));
+        "cohortName", Collections.singletonList("acronym:filter3"));
     assertEquals(1, page.getContent().size());
     assertEquals("third", page.getContent().get(0).getCohortName());
 
     //single field multiple filter
     page = cohortSearchRepository.findPageWithFilters(PageRequest.of(0, 5), null, "cohortName",
-            Collections.singletonList("acronym:filter3~filter2"));
-    assertEquals(2, page.getContent().size());
+        List.of("acronym:filter2", "dataTypes:testDataType"));
+    assertEquals(1, page.getContent().size());
 
-    assertTrue((page.getContent().get(0).getCohortName().equals("second")
-            && page.getContent().get(1).getCohortName().equals("third"))
-    || (page.getContent().get(0).getCohortName().equals("third")
-            && page.getContent().get(0).getCohortName().equals("second")));
-
+    assertEquals("second", page.getContent().get(0).getCohortName());
 
     //multiple field multiple filter, second filter does not match with the first filter
     page = cohortSearchRepository.findPageWithFilters(PageRequest.of(0, 5), null, "cohortName",
-            Arrays.asList("acronym:filter3~filter2","description:first"));
+        Arrays.asList("acronym:filter3", "description:first"));
     assertEquals(0, page.getContent().size());
 
     //multiple field multiple filter. Only third cohort matches both acronym and description
     page = cohortSearchRepository.findPageWithFilters(PageRequest.of(0, 5), null, "cohortName",
-            Arrays.asList("acronym:filter3~filter2","description:third"));
+        Arrays.asList("dataTypes:testDataType", "description:third"));
     assertEquals(1, page.getContent().size());
     assertEquals("third", page.getContent().get(0).getCohortName());
 
   }
-
-
 }
